--- a/4-guia/ejercicios-4/ej-22-4.tex
+++ b/4-guia/ejercicios-4/ej-22-4.tex
@@ -1,1 +1,6 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+Sean $a, b \en \enteros$ con $(a:b) = 2$. Proabr que los valores posibles para
+$(7a + 3b: 4a - 5b)$ son $2$ y $94$. Exhibir valores de $a$ y $b$ para los cuales da $2$ y para los cuales da $94$.
+\end{enunciado}
+
+\hacer
