--- a/1-guia/ejercicios-1/ej-2-1.tex
+++ b/1-guia/ejercicios-1/ej-2-1.tex
@@ -25,14 +25,22 @@ Muy parecido al ejercicio anterior.
 
 \begin{multicols}{3}
   \begin{enumerate}[label=(\roman*)]
-    \item $3 \en A       \to F  $
+    \item $3 \en A \to F  $
+
     \item $\set{3} \subseteq A \to F$
+
     \item $\set{3} \en A    \to V$
-    \item $\set{\set{3}} \en A \to V$
+
+    \item $\set{\set{3}} \en A \to F$
+
     \item $\set{1,2} \en A \to V$
+
     \item $\set{1,2} \subseteq A \to V $
+
     \item $\set{\set{1,2}} \subseteq A \to V $
-    \item ${\set{\set{1,2}, 3} \subseteq A \to F}$
+
+    \item $\set{\set{1,2}, 3} \subseteq A \to F$
+
     \item $\vacio \en A \to F $
     \item $\vacio \subseteq A \to V $
     \item $A \en A \to F $
