--- a/4-guia/ejercicios-4/ej-4-4.tex
+++ b/4-guia/ejercicios-4/ej-4-4.tex
@@ -60,7 +60,7 @@ $$
 
 El \red{!!} es todo tuyo (\textit{hints:} diferencia de cuadrados, propiedades de exponentes... \faIcon{hands-wash})
 
-En el último paso se comprueba que $p(k+1)$ es vedadera.
+En el último paso se comprueba que $p(k+1)$ es verdadera.
 
 Como $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas, por el principio de inducción también lo será ${p(n) \paratodo n \en \naturales}$.
 
